fix(Cars): 연속된 쉼표나 빈 문자열 입력 시 예외 처리 보완
- 자동차 이름 분리 시 split 메서드에 negative limit을 적용하여 엄격한 split 적용
- 쉼표로만 구성된 문자열 입력 시 IllegalArgumentException 발생하도록 수정